--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <div class="logo">🍌 Bananin</div>
+  <div class="logo">🍌 Bananin eSports</div>
   <ul class="nav-links">
     <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
       <a routerLink="">Inicio</a>
