--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
-/* Modo día (por defecto) */
 :root {
-  --navbar-bg: #ffeb3b; /* amarillo banana */
+  --navbar-bg: #ffeb3b;
   --text-color: #333;
   --background-color: #fff;
 }
 
-/* Modo noche */
 body.dark-mode {
   --navbar-bg: #333;
   --text-color: #f1f1f1;
